fixed: user pressing enter without typing anything, changed: numbers bolder, font letter-spacing, tests color to blue, footer profile link color to white

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 @font-face {
     font-family: 'mm';
     src: url('../fonts/Pyidaungsu-Book-1.8.3.ttf');
@@ -6,6 +7,26 @@
 
 .mm-text {
     font-family: 'mm', sans-serif;
+}
+
+.--text-red {
+    color: red;
+}
+
+.--text-greenyellow {
+    color: greenyellow;
+}
+
+.--text-lightgray {
+    color: lightgray;
+}
+
+.--text-blueish {
+    color: rgb(47, 78, 255);
+}
+
+.--letter-spacing {
+    letter-spacing: 1px;
 }
 
 body {
@@ -45,26 +66,6 @@ body {
 
 h3 {
     padding-top: 10px;
-}
-
-.confirmed {
-    color: red;
-}
-
-.active {
-    color: orange;
-}
-
-.recovered {
-    color: greenyellow;
-}
-
-.deaths {
-    color: lightgray;
-}
-
-.tests {
-    color: #ff4e08;
 }
 
 footer {
@@ -120,4 +121,25 @@ small {
 
 .search:focus {
     outline: none !important;
+}
+
+.profile-link {
+    color: white;
+    text-decoration: underline white;
+}
+
+.data-numbers {
+    font-weight: bolder;
+    letter-spacing: 2px;
+}
+
+@media only screen and (min-width: 768px) {
+    .search {
+        width: 50%
+    }
+
+    .search-row>div {
+        display: flex;
+        justify-content: center;
+    }
 }
